--- a/front-web/src/NavBar/styles.css
+++ b/front-web/src/NavBar/styles.css
@@ -1,6 +1,6 @@
 .main-navbar {
     height: 70px;
-    background-color: #da5c5c;
+    background-color: #00FF00;
     padding-left: 45px;
     display: flex;
     align-items: center;
